<resources>
    <string name="app_name">foodSupport</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_ingredients">Ingredients</string>
    <string name="menu_search">Search</string>
    <string name="menu_recipes">Recipes</string>
    <string name="ingredients">Ingredients</string>
    <string name="search">Search</string>
    <string name="recipes">Recipes</string>
</resources>
