<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_foreground"
            android:title="Home"/>
        <item
            android:id="@+id/nav_ingredients"
            android:icon="@drawable/ic_local_pizza_black_24dp"
            android:title="@string/ingredients" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_format_list_bulleted_white_24dp"
            android:title="@string/recipes" />
    </group>

</menu>
