<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mehhhh.ui.home.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/nav_recipes"
        android:name="com.example.mehhhh.ui.recepies.RecepiesFragment"
        android:label="@string/menu_recipes"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.mehhhh.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_ingredients"
        android:name="com.example.mehhhh.ui.ingredients.IngredientFragment"
        android:label="@string/menu_ingredients"
        tools:layout="@layout/fragment_ingredients" />
</navigation>